--- a/ImageCatalogation/src/main/webapp/index.html
+++ b/ImageCatalogation/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 
 	<form action="CheckLogin" method="POST">
 		Username: <input type="text" name="username" required> <br>
-		Password: <input type="password" name="password" required><br>
+		Password: <input type="password" name="pwd" required><br>
 		<input type="submit" value="login">
 		<p th:text=" ${errorMsg}"></p>
 	</form>
