--- a/ImageCatalogation/src/main/webapp/WEB-INF/Home.html
+++ b/ImageCatalogation/src/main/webapp/WEB-INF/Home.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+<head>
 <meta charset="ISO-8859-1">
 <title>Image collection</title>
-<link rel="stylesheet" type="text/css" media="all"
-	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head> 
 
 
@@ -12,22 +11,35 @@
 
 	<h1>Welcome to the images collection</h1>
 	
+	<div th:if="${linkClicked}">
+		<form th:action="@{/PasteCategory}" method="GET">
+  			<ul>
+    			<li th:each="category : ${allCategories}">
+      				<span th:text="${category.id}"></span>
+      				<span th:text="${category.name}"></span>
+      				<span>
+        				<a th:href="@{/PasteCategory(categoryId=${category.id})}">Copia qui</a>
+      				</span> 
+    			</li>
+  			</ul>
+		</form>
+	</div>
 
-<form th:action="@{/CopyCategory}" method="get">
-  <ul>
-    <li th:each="category : ${allCategories}">
-      <span th:text="${category.id}"></span>
-      <span th:text="${category.name}"></span>
-      <span>
-        <button type="submit" name="categoryId" th:value="${category.id}">Copia</button>
-      </span> 
-    </li>
-  </ul>
-</form>
+	<div th:unless="${linkClicked}">
+		<form th:action="@{/CopyCategory}" method="GET">
+  			<ul>
+    			<li th:each="category : ${allCategories}">
+      				<span th:text="${category.id}"></span>
+      				<span th:text="${category.name}"></span>
+      				<span>
+        				<a th:href="@{/CopyCategory(categoryId=${category.id})}">Copia</a>
+      				</span> 
+    			</li>
+  			</ul>
+		</form>
+	</div>
 
 
-
- 	
 	<div  class="formdiv">
 		<p>Complete the form to create a product</p>
 		<form action="#" th:action="@{/CreateCategory}" method="POST">
