--- a/ImageCatalogation/src/main/webapp/index.html
+++ b/ImageCatalogation/src/main/webapp/index.html
@@ -16,7 +16,7 @@ background: #000080;
 		     <p style ="color:#00ff00;"><font size="4">UserName:</font></p> <input type="text" name="username" required> <br>
 		     <p style ="color:#00ff00;"><font size="4">Password:</font></p><input type="password" name="password" required><br>
 		     <input type="submit" value="login">
-		<p th:text=" ${errorMsg}"></p>
+		<p th:text=" ${errorMsg}" style="color:#ff0000"></p>
 	    </form>
 <p><br></p>
 <p><br></p>
