--- a/ImageCatalogationJS/src/main/webapp/index.html
+++ b/ImageCatalogationJS/src/main/webapp/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Login page</title>
+<script src="utils.js" charset="utf-8" defer></script>
+<script src="loginManagement.js" charset="utf-8" defer></script>
 <style> body{
 background: #000080;
 }
@@ -12,11 +14,13 @@ background: #000080;
 	<h1 align="center" style="color:#ff0000"><font size=10> WELCOME TO THE IMAGE CATALOGATION WEBSITE</font></h1>
 	<h2 align="left" style="color:#ff0000"><font size="7">Please login to join our site</font></h2>
 
-	    <form action="CheckLogin" method="POST">
+	    <form action="#">
+	    
 		     <p style ="color:#00ff00;"><font size="4">UserName:</font></p> <input type="text" name="username" required> <br>
 		     <p style ="color:#00ff00;"><font size="4">Password:</font></p><input type="password" name="password" required><br>
-		     <input type="submit" value="login">
-		<p th:text=" ${errorMsg}"></p>
+		     <input id="loginbutton" type="button" value="login">
+		<p id="errormessage" style="color:#ff0000"></p>
+		
 	    </form>
 <p><br></p>
 <p><br></p>
